updated and cleaned up documentation

--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/tasks/encrypt_page_keys.html
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/tasks/encrypt_page_keys.html
@@ -2,16 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-      <link rel="stylesheet" type="text/css" href="format.css"/>
+      <link rel="stylesheet" type="text/css" href="../format.css"/>
    </head>
    <body>
 
-      <h1>Notices</h1>
+      <h1>Keystore and Keys</h1>
 
 
-      <p>The material in this guide is Copyright (c) Dominik Schadow, 2008.</p>
+      <p></p>
 
-      <p><a href="about.html">Terms and conditions regarding the use of this guide.</a></p>
 
    </body>
 </html>
