--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/whatsnew.html
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/whatsnew.html
@@ -6,12 +6,10 @@
    </head>
    <body>
 
-      <h1>Notices</h1>
+      <h1>What's New</h1>
 
 
-      <p>The material in this guide is Copyright (c) Dominik Schadow, 2008.</p>
-
-      <p><a href="about.html">Terms and conditions regarding the use of this guide.</a></p>
+      <p></p>
 
    </body>
 </html>
