--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/book.html
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/book.html
@@ -11,8 +11,8 @@
       <h2>Contents</h2>
 		<ul class="NavList">
 			<li><a href="overview.html">Overview</a></li>
-			<li><a href="/tasks/tasks.html">Tasks</a></li>
-			<li><a href="/setup/preferences.html">Preferences</a></li>
+			<li><a href="tasks/tasks.html">Tasks</a></li>
+			<li><a href="setup/preferences.html">Preferences</a></li>
 			<li><a href="tips.html">Tips and Tricks</a></li>
 			<li><a href="whatsnew.html">What's New</a></li>
 			<li><a href="notices.html">Legal</a></li>
