--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/tasks/tasks.html
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/tasks/tasks.html
@@ -10,10 +10,10 @@
 
       <h2>Contents</h2>
 		<ul class="NavList">
-			<li><a href="sign.html">Signature Wizard</a></li>
-			<li><a href="verify.html">Signatures View</a></li>
-			<li><a href="encrypt.html">Encryption Wizard</a></li>
-			<li><a href="decrypt.html">Decryption Wizard</a></li>
+			<li><a href="sign.html">XML Signature Wizard</a></li>
+			<li><a href="verify.html">XML Signatures View</a></li>
+			<li><a href="encrypt.html">XML Encryption Wizard</a></li>
+			<li><a href="decrypt.html">XML Decryption Wizard</a></li>
 			<li><a href="canonicalize.html">Canonicalization</a></li>
 			<li><a href="quickfunctions.html">Quick Functions</a></li>
 		</ul>
