--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/about.html
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/about.html
@@ -1,33 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-   <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<HTML>
+
+<head>
 <title>About</title>
+<meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1">
 </head>
 
-<body lang="EN-US">
+<BODY lang="EN-US">
 
-<h3>About This Content</h3>
+<H3>About This Content</H3>
 
-<p>March, 2009</p>
+<P>March, 2009</P>
 
-<h3>License</h3>
+<H3>License</H3>
 
-<p>The Eclipse Foundation makes available all content in this plug-in
-("Content"). Unless otherwise indicated below, the Content is provided to you
+<P>The Eclipse Foundation makes available all content in this plug-in
+(&quot;Content&quot;). Unless otherwise indicated below, the Content is provided to you
 under the terms and conditions of the Eclipse Public License Version 1.0
-("EPL"). A copy of the EPL is available at
-<a href="http://www.eclipse.org/org/documents/epl-v10.php">http://www.eclipse.org/org/documents/epl-v10.php</a>.
-For purposes of the EPL, "Program" will mean the Content.</p>
+(&quot;EPL&quot;). A copy of the EPL is available at
+<A href="http://www.eclipse.org/org/documents/epl-v10.php">http://www.eclipse.org/org/documents/epl-v10.php</A>.
+For purposes of the EPL, &quot;Program&quot; will mean the Content.</P>
 
-<p>If you did not receive this Content directly from the Eclipse Foundation, the
-Content is being redistributed by another party ("Redistributor") and different
+<P>If you did not receive this Content directly from the Eclipse Foundation, the
+Content is being redistributed by another party (&quot;Redistributor&quot;) and different
 terms and conditions may apply to your use of any object code in the Content.
-Check the Redistributors license that was provided with the Content. If no such
+Check the Redistributor&apos;s license that was provided with the Content. If no such
 license exists, contact the Redistributor. Unless otherwise indicated below, the
 terms and conditions of the EPL still apply to any source code in the Content
 and such source code may be obtained at
-<a href="http://www.eclipse.org/">http://www.eclipse.org/</a>.</p>
+<A href="http://www.eclipse.org/">http://www.eclipse.org/</A>.</P>
 
-</body>
-</html>
+</BODY>
+</HTML>
